--- a/.github/workflows/generate_repo.yaml
+++ b/.github/workflows/generate_repo.yaml
@@ -2,7 +2,7 @@ name: Generate Repo
 
 on:
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: '0 0 * * *'
   workflow_dispatch:
   repository_dispatch:
     branches:
@@ -24,9 +24,9 @@ jobs:
       - name: Commit Files
         continue-on-error: true
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit -m "Regenerate Repo" -a
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git commit -m "Regenerate Repo" --author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>" -a
       - name: Push Changes
         continue-on-error: true
         uses: ad-m/github-push-action@master
