--- a/.github/workflows/generate_repo.yaml
+++ b/.github/workflows/generate_repo.yaml
@@ -2,7 +2,7 @@ name: Generate Repo
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '30 * * * *'
   workflow_dispatch:
   repository_dispatch:
     branches:
