--- a/.github/workflows/update_graphs.yaml
+++ b/.github/workflows/update_graphs.yaml
@@ -19,9 +19,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 'pypy3.10'
-          cache: 'pip-graphs'
+          cache: 'pip'
       - name: Install Python Dependencies
-        run: pip install -r requirements-graphs.txt
+        run: pip install -r requirements.txt
       - name: Run Python Script
         run: python gen-graphs.py
       - name: Commit Files
