--- a/.github/workflows/generate_repo.yaml
+++ b/.github/workflows/generate_repo.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           python-version: 'pypy3.10'
           cache: 'pip'
+          cache-dependency-path: 'requirements.txt'
       - name: Install Python Dependencies
         run: pip install -r requirements.txt
       - name: Run Python Script
