--- a/.github/workflows/update_graphs.yaml
+++ b/.github/workflows/update_graphs.yaml
@@ -16,10 +16,11 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 'pypy3.10'
           cache: 'pip'
+          cache-dependency-path: 'requirements.txt'
       - name: Install Python Dependencies
         run: pip install -r requirements.txt
       - name: Run Python Script
