--- a/.github/workflows/update_graphs.yaml
+++ b/.github/workflows/update_graphs.yaml
@@ -35,7 +35,9 @@ jobs:
           source ./.venv/bin/activate
           python -m pip install -r requirements.txt
       - name: Run Python Script
-        run: python gen-graphs.py
+        run: |
+          source ./.venv/bin/activate
+          python gen-graphs.py
       - name: Commit Files
         continue-on-error: true
         run: |
